Support RC filter value setting.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(libkss src/main.c)
 target_link_libraries(libkss kss)
 
 if(EMSCRIPTEN)
-  set(KSSPLAY_EXPORTS "'_KSSPLAY_new','_KSSPLAY_reset','_KSSPLAY_set_data','_KSSPLAY_delete','_KSSPLAY_calc','_KSSPLAY_get_loop_count','_KSSPLAY_get_fade_flag','_KSSPLAY_fade_start','_KSSPLAY_get_stop_flag','_KSSPLAY_set_device_quality','_KSSPLAY_set_silent_limit'")
+  set(KSSPLAY_EXPORTS "'_KSSPLAY_new','_KSSPLAY_reset','_KSSPLAY_set_data','_KSSPLAY_delete','_KSSPLAY_calc','_KSSPLAY_get_loop_count','_KSSPLAY_get_fade_flag','_KSSPLAY_fade_start','_KSSPLAY_get_stop_flag','_KSSPLAY_set_device_quality','_KSSPLAY_set_silent_limit','_KSSPLAY_set_rcf'")
   set(KSS_EXPORTS "'_KSS_new','_KSS_get_title','_KSS_delete','_KSS_bin2kss'")
   set(CMAKE_EXE_LINKER_FLAGS "-s MODULARIZE=1 --memory-init-file 0 -O3 -s EXPORTED_FUNCTIONS=\"[${KSSPLAY_EXPORTS},${KSS_EXPORTS}]\"")
 endif()
