--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "cp-cli": "^1.1.0",
     "eslint": "^4.11.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "rm-cli": "^1.4.2"
   },
   "dependencies": {
     "encoding-japanese": "^1.0.26"
@@ -33,7 +34,7 @@
     "type": "git",
     "url": "https://github.com/digital-sound-antiques/libkss-js.git"
   },
-  "engines" : { 
-    "node" : ">=4.1.1"
+  "engines": {
+    "node": ">=4.1.1"
   }
 }
