--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libkss-js",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "KSS player library for Javascript",
   "main": "src/entry.js",
   "files": [
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run clean && npm run build",
-    "clean": "rm-cli -r lib build",
+    "clean": "rm-cli -ss -r lib build",
     "build": "mkdirp lib build && cd build && emcmake cmake .. && cmake --build . && cp-cli libkss.js ../lib/libkss.js",
     "jsdoc": "rm-cli -r docs && jsdoc -c jsdoc.config.json --readme README.md",
     "lint": "eslint src"
@@ -33,8 +33,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/digital-sound-antiques/libkss-js.git"
-  },
-  "engines": {
-    "node": ">=4.1.1"
   }
 }
