--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "license": "ISC",
   "devDependencies": {
     "cp-cli": "^1.1.0",
-    "eslint": "^4.11.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "mkdirp": "^0.5.1",
+    "prettier": "^1.18.2",
     "rm-cli": "^1.4.2"
   },
   "dependencies": {
