--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "libkss-js",
-  "version": "0.11.1",
+  "version": "0.11.2",
   "description": "KSS player library for Javascript",
-  "main": "src/entry.js",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "files": [
     "README.md",
     "package.json",
