Fix the problem where Module._malloc and Module._free are not exported.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ set (exported_function_list
   _KSS_get_title
   _KSS_delete
   _KSS_bin2kss
+  _malloc
+  _free
 )
 
 list(JOIN exported_function_list "','" exported_functions)
