--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libkss-js",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "KSS player library for Javascript",
   "main": "src/index.js",
   "types": "src/index.d.ts",
@@ -31,13 +31,18 @@
     "jsdoc": "^3.6.3",
     "mkdirp": "^0.5.1",
     "prettier": "^1.18.2",
-    "rm-cli": "^1.4.2"
+    "rm-cli": "^1.4.2",
+    "wavefile": "^11.0.0"
   },
   "dependencies": {
-    "encoding-japanese": "^1.0.26"
+    "encoding-japanese": "^1.0.26",
+    "node-fetch": "^2.6.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/digital-sound-antiques/libkss-js.git"
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
