--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libkss-js",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "KSS player library for Javascript",
   "main": "src/index.js",
   "types": "src/index.d.ts",
@@ -15,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "npm run clean && npm run build",
     "clean": "rm-cli -ss -r lib build",
-    "build": "mkdirp lib build && cd build && emcmake cmake .. && cmake --build . && cpy libkss.js ../lib/libkss.js",
+    "build": "mkdirp lib build && cd build && emcmake cmake .. && cmake --build . && cpy libkss.js ../lib/",
     "jsdoc": "rm-cli -r docs ; jsdoc -c jsdoc.config.json --readme README.md",
     "lint": "eslint src"
   },
