--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libkss-js",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "description": "KSS player library for Javascript",
   "main": "src/index.js",
   "types": "src/index.d.ts",
@@ -28,10 +28,11 @@
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "ink-docstrap": "^1.3.2",
-    "jsdoc": "^3.6.3",
+    "jsdoc": "^3.6.11",
     "mkdirp": "^0.5.1",
     "prettier": "^1.18.2",
-    "rm-cli": "^1.4.2"
+    "rm-cli": "^1.4.2",
+    "node-fetch": "^2.0.0"
   },
   "dependencies": {
     "encoding-japanese": "^1.0.30",
