--- a/package.json
+++ b/package.json
@@ -1,42 +1,49 @@
 {
   "name": "libkss-js",
-  "version": "1.7.1",
+  "version": "2.0.0",
   "description": "KSS player library for Javascript",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "README.md",
     "package.json",
     "LICENSE.md",
-    "src",
+    "dist",
     "lib"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run clean && npm run build",
-    "clean": "rm-cli -ss -r lib build",
-    "build": "mkdirp lib build && cd build && emcmake cmake .. && cmake --build . && cpy libkss.js ../lib/",
-    "jsdoc": "rm-cli -r docs ; jsdoc -c jsdoc.config.json --readme README.md",
-    "lint": "eslint src"
+    "prepare": "npm run build:all",
+    "clean:all": "npm run clean:emscripten && npm run clean",
+    "clean:emscripten": "rm-cli -ss -r lib/libkss.js build",
+    "clean": "rm-cli -ss -r dist",
+    "build:all": "npm run build:emscripten && npm run build",
+    "build:emscripten": "mkdirp build && cd build && emcmake cmake .. && cmake --build . && cpy libkss.js ../lib/",
+    "build": "tsc",
+    "doc": "rm-cli -ss -r docs ; typedoc"
   },
   "keywords": [],
   "author": "Mitsutaka Okazaki",
   "license": "ISC",
   "devDependencies": {
+    "@types/emscripten": "^1.39.6",
+    "@types/encoding-japanese": "^2.0.1",
+    "@types/sha1": "^1.1.3",
     "cpy-cli": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "ink-docstrap": "^1.3.2",
-    "jsdoc": "^3.6.11",
-    "mkdirp": "^0.5.1",
-    "prettier": "^1.18.2",
+    "mkdirp": "^2.1.5",
+    "node-fetch": "^3.3.1",
+    "prettier": "^2.8.4",
     "rm-cli": "^1.4.2",
-    "node-fetch": "^2.0.0"
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typedoc": "^0.23.27",
+    "typescript": "^4.9.0"
   },
   "dependencies": {
-    "encoding-japanese": "^1.0.30",
-    "js-sha1": "^0.6.0",
+    "encoding-japanese": "^2.0.0",
+    "sha1": "^1.1.1",
     "wavefile": "^11.0.0"
   },
   "repository": {
