--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "libkss-js",
   "version": "2.0.0",
   "description": "KSS player library for Javascript",
-  "type": "module",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "files": [
     "README.md",
     "package.json",
@@ -14,13 +12,15 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build:all",
+    "prepublishOnly": "npm run build:emscripten",
+    "prepare": "npm run build",
     "clean:all": "npm run clean:emscripten && npm run clean",
     "clean:emscripten": "rm-cli -ss -r lib/libkss.js build",
     "clean": "rm-cli -ss -r dist",
     "build:all": "npm run build:emscripten && npm run build",
     "build:emscripten": "mkdirp build && cd build && emcmake cmake .. && cmake --build . && cpy libkss.js ../lib/",
     "build": "tsc",
+    "build:watch": "tsc -w",
     "doc": "rm-cli -ss -r docs/api ; typedoc"
   },
   "keywords": [],
@@ -30,14 +30,15 @@
     "@types/emscripten": "^1.39.6",
     "@types/encoding-japanese": "^2.0.1",
     "@types/sha1": "^1.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "cpy-cli": "^4.2.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "mkdirp": "^2.1.5",
     "node-fetch": "^3.3.1",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.7",
     "rm-cli": "^1.4.2",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
     "typedoc": "^0.23.27",
     "typescript": "^4.9.0"
   },
@@ -51,6 +52,6 @@
     "url": "https://github.com/digital-sound-antiques/libkss-js.git"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": "^14.13.1 || >=16.0.0"
   }
 }
