--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "prepublishOnly": "npm run build:emscripten",
     "prepare": "npm run build",
     "clean:all": "npm run clean:emscripten && npm run clean",
-    "clean:emscripten": "rm-cli -ss -r lib/libkss.js build",
-    "clean": "rm-cli -ss -r dist",
+    "clean:emscripten": "rimraf lib/libkss.js build",
+    "clean": "rimraf dist",
     "build:all": "npm run build:emscripten && npm run build",
     "build:emscripten": "mkdirp build && cd build && emcmake cmake .. && cmake --build . && cpy libkss.js ../lib/",
     "build": "tsc",
     "build:watch": "tsc -w",
-    "doc": "rm-cli -ss -r docs/api ; typedoc"
+    "doc": "rimraf docs/api ; typedoc"
   },
   "keywords": [],
   "author": "Mitsutaka Okazaki",
@@ -32,20 +32,19 @@
     "@types/sha1": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "buffer": "^6.0.3",
     "cpy-cli": "^4.2.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "mkdirp": "^2.1.5",
-    "node-fetch": "^3.3.1",
     "prettier": "^2.8.7",
-    "rm-cli": "^1.4.2",
+    "rimraf": "^4.4.1",
     "typedoc": "^0.23.27",
     "typescript": "^4.9.0"
   },
   "dependencies": {
     "encoding-japanese": "^2.0.0",
-    "sha1": "^1.1.1",
-    "wavefile": "^11.0.0"
+    "sha1": "^1.1.1"
   },
   "repository": {
     "type": "git",
