--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
+  "exclude": ["build", "docs", "dist", "**/__tests__/**/*"],
+  "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "target": "ES6",
-    "module": "COMMONJS",
     "declaration": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
+    "declarationMap": true,
     "esModuleInterop": true,
+    "inlineSources": true,
+    "isolatedModules": true,
+    "module": "commonjs",
     "moduleResolution": "node16",
     "noImplicitOverride": true,
-  },
-  "exclude": [
-    "build",
-    "docs",
-    "dist",
-    "**/__tests__/**/*"
-  ]
+    "outDir": "./dist",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2020"
+  }
 }
