Exclude Node's Buffer class.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
   "exclude": ["build", "docs", "dist", "**/__tests__/**/*"],
   "include": ["src/**/*.ts"],
   "compilerOptions": {
+    "paths": { "sha1": ["./types/sha1"] },
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "inlineSources": true,
-    "isolatedModules": true,
     "module": "commonjs",
     "moduleResolution": "node16",
     "noImplicitOverride": true,
