--- a/package.json
+++ b/package.json
@@ -28,11 +28,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/emscripten": "^1.39.6",
-    "@types/encoding-japanese": "^2.0.1",
-    "@types/sha1": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
-    "buffer": "^6.0.3",
     "cpy-cli": "^4.2.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
@@ -43,7 +40,7 @@
     "typescript": "^4.9.0"
   },
   "dependencies": {
-    "encoding-japanese": "^2.0.0",
+    "sjis2utf16": "file:../sjis2utf16",
     "sha1": "^1.1.1"
   },
   "repository": {
@@ -51,6 +48,6 @@
     "url": "https://github.com/digital-sound-antiques/libkss-js.git"
   },
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=14.18.2"
   }
 }
