--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libkss-js",
-  "version": "2.2.0-beta.0",
+  "version": "2.2.0",
   "description": "KSS player library for Javascript",
   "main": "dist/index.js",
   "files": [
